[DEV] Add matchs data model
